--- a/index.html
+++ b/index.html
@@ -6,12 +6,34 @@
 
   <script src="js/form.js"></script>
 <!--Link game.js e player.js-->
-   
-<script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-database.js"></script>
+<script src="js/game.js"></script> 
+<script src="js/player.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-database.js"></script>
 
 <!--Adicione configuração do banco de dados abaixo-->
   
-  <link rel="stylesheet" type="text/css" href="style.css">
+<script>
+  // Import the functions you need from the SDKs you need
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyDg_J4TcLsQYct__LyifdKm05IdnI45Ce4",
+    authDomain: "coletando-frutas.firebaseapp.com",
+    databaseURL: "https://coletando-frutas-default-rtdb.firebaseio.com",
+    projectId: "coletando-frutas",
+    storageBucket: "coletando-frutas.appspot.com",
+    messagingSenderId: "816937249313",
+    appId: "1:816937249313:web:1c86f471e39a8358da5160"
+  };
+
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
+
+<link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8">
 
 </head>
